<resources>
    <string name="app_name">AgroLens</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="username">Krrish</string>
    <string name="detect">Detect</string>
    <string name="crop_details">Crop Details</string>
    <string name="crop_search">Crop Details</string>
    <string name="find">Find</string>
    <string name="legal">Legal</string>
    <string name="services">Services</string>
    <string name="register">Register</string>
    <string name="enter_email_id">Enter Email id</string>
    <string name="enter_password">Enter Password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user_sign_up">New user? sign up!</string>
    <string name="wheat">wheat</string>
    <string name="crops">Crops</string>
    <string name="rice">rice</string>
    <string name="corn">corn</string>
    <string name="cotton">cotton</string>
    <string name="sunflower">sunflower</string>
    <string name="jute">jute</string>
    <string name="tea">tea</string>
    <string name="tobacco">tobacco</string>
    <string name="sugarcane">sugarcane</string>
    <string name="bajra">bajra</string>
    <string name="ar">AR</string>
    <string name="live_prediction">Live Prediction</string>
    <string name="coordinates">Coordinates </string>
    <string name="uploaded_on">Uploaded on </string>
    <string name="crop_id">Crop id </string>
    <string name="click_for_more_info">click for more info</string>
    <string name="crop">Crop</string>
    <string name="location">Location</string>
    <string name="uploaded_by">Uploaded by</string>
    <string name="name">Name</string>
    <string name="emailid">Emailid</string>
    <string name="phone_no">Phone no</string>
    <string name="accuracy">Accuracy </string>
    <string name="crop_age">Crop Age </string>
    <string name="next">Next</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="crop_history">Crop History</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="select_location">Select Location</string>
    <string name="classify">Classify</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload_history">Upload History</string>


</resources>