<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorpalet1"
    android:orientation="vertical"
    tools:context=".LoginandRegister.Register">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textColor="@color/colorpalet5"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/registername"
            android:layout_height="wrap_content"
            android:hint="@string/enter_user_name"
            android:padding="20dp"
            android:background="@drawable/edittext_design"

            android:inputType="text"
            android:layout_margin="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/registermail"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_id"
            android:padding="20dp"
            android:background="@drawable/edittext_design"

            android:inputType="text"
            android:layout_margin="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:id="@+id/registerpassword"
            android:padding="20dp"
            android:background="@drawable/edittext_design"

            android:inputType="textPassword"
            android:layout_margin="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Register"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:background="@drawable/button_design"
        android:layout_margin="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="AlreadyLogin"
        android:textColor="@color/colorpalet5"
        android:layout_margin="20dp"
        android:text="@string/already_have_an_account_login"/>

</LinearLayout>