<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/cropdetail_design"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:id="@+id/cropImage_bottom"
            android:scaleType="centerCrop"
            android:src="@drawable/logobg"
            android:layout_height="100dp">

        </de.hdodenhof.circleimageview.CircleImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop"
            android:textColor="@color/colorpalet5"
            android:fontFamily="@font/comicbd"
            android:textStyle="bold"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/bottom_crop_name"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:background="@drawable/bg_receiver"
            android:text="@string/wheat"
            android:textColor="@color/colorpalet5"
            android:fontFamily="@font/comici"
            android:textStyle="italic"
            android:textSize="15dp"
            android:gravity="center_horizontal" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textColor="@color/colorpalet5"
        android:fontFamily="@font/comicbd"
        android:textStyle="bold"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:background="@drawable/bg_receiver"
        android:id="@+id/bottom_crop_location"
        android:text="No;2,periyar street,Kannika puram, avadi, chennai-600054."
        android:textColor="@color/colorpalet5"
        android:fontFamily="@font/comici"
        android:textStyle="italic"
        android:textSize="15dp"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coordinates"
        android:textColor="@color/colorpalet5"
        android:fontFamily="@font/comicbd"
        android:textStyle="bold"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:background="@drawable/bg_receiver"
        android:id="@+id/bottom_crop_coordinates"
        android:text="13.254654121, 14.25642165"
        android:textColor="@color/colorpalet5"
        android:fontFamily="@font/comici"
        android:textStyle="italic"
        android:textSize="15dp"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploaded_on"
        android:textColor="@color/colorpalet5"
        android:fontFamily="@font/comicbd"
        android:textStyle="bold"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:background="@drawable/bg_receiver"
        android:id="@+id/bottom_crop_dateandtime"
        android:text="24/10/2020 12:50:30"
        android:textColor="@color/colorpalet5"
        android:fontFamily="@font/comici"
        android:textStyle="italic"
        android:textSize="15dp"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploaded_by"
        android:textColor="@color/colorpalet5"
        android:fontFamily="@font/comicbd"
        android:textStyle="bold"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:background="@drawable/bg_receiver"
        android:id="@+id/bottom_crop_username"
        android:text="krrish"
        android:textColor="@color/colorpalet5"
        android:fontFamily="@font/comici"
        android:textStyle="italic"
        android:textSize="15dp"
        android:gravity="center_horizontal" />

</LinearLayout>